--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,200 @@
-div img {
-    width: 20%;
+*{
+    font-family: 'Montserrat', sans-serif;
+}
+
+@media (max-width:640px){
+
+    .wrapper > div{
+        margin-top: 10px;
+    }
+
+    .wrapper{
+        display:grid;
+        grid-template-columns: repeat(5, 1fr);
+    }
+
+
+    .box1{
+        grid-column: 1/6;
+        text-align: center;
+    }
+
+    .box2{
+        grid-column: 1/6;
+        text-align: center;
+        font-size: 130%;
+    }
+
+    .img1{
+        grid-column: 1/2;
+        text-align: center;
+    }
+
+    .img2{
+        grid-column: 2/3;
+        text-align: center;
+    }
+
+    .img3{
+        grid-column: 3/4;
+        text-align: center;
+    }
+
+    .img4{
+        grid-column: 4/5;
+        text-align: center;
+    }
+
+    .img5{
+        grid-column: 5/6;
+        text-align: center;
+    }
+
+    .img6{
+        grid-column: 1/6;
+        text-align: center;
+    }
+
+    .img1 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img2 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img3 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img4 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img5 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img6 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .box3{
+        grid-column: 1/6;
+        text-align: center;
+    }
+
+    .box4{
+        grid-column: 1/6;
+        text-align: center;
+    }
+
+    .box5{
+        grid-column: 1/6;
+        text-align: center;
+    }
+}
+
+@media (min-width:640px){
+    .wrapper > div{
+        margin-top: 10px;
+    }
+
+    .wrapper{
+        display:grid;
+        grid-template-columns: repeat(5, 1fr);
+    }
+
+
+    .box1{
+        grid-column: 1/6;
+        text-align: center;
+    }
+
+    .box2{
+        grid-column: 1/6;
+        text-align: left;
+        font-size: 130%;
+    }
+
+    .img1{
+        grid-column: 1/2;
+        text-align: center;
+    }
+
+    .img2{
+        grid-column: 2/3;
+        text-align: center;
+    }
+
+    .img3{
+        grid-column: 3/4;
+        text-align: center;
+    }
+
+    .img4{
+        grid-column: 4/5;
+        text-align: center;
+    }
+
+    .img5{
+        grid-column: 5/6;
+        text-align: center;
+    }
+
+    .img6{
+        grid-column: 1/6;
+        text-align: center;
+    }
+
+    .img1 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img2 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img3 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img4 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img5 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .img6 > img{
+        width:100%;
+        height: 100%;
+    }
+
+    .box3{
+        grid-column: 2/3;
+        text-align: right;
+    }
+
+    .box4{
+        grid-column: 3/4;
+        text-align: center;
+    }
+
+    .box5{
+        grid-column: 4/5;
+        text-align: left;
+    }
 }
